--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "npm ci && npm run build",
   "outputDirectory": "client/dist",
+  "installCommand": "npm ci",
   "functions": {
     "api/index.ts": {
       "maxDuration": 30
