--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm ci && npx vite build --config client/vite.config.ts",
+  "buildCommand": "npm ci && npm run build",
   "outputDirectory": "client/dist",
   "installCommand": "npm ci",
   "functions": {
